# xml-light

./: .gitignore  CHANGES.md  LICENSE  Makefile  README  README.md  dtd.ml  dune-project  xml-light.mllib  xml-light.opam  xml.ml  xml.mli  xmlParser.ml  xmlParser.mli  xml_lexer.mli  xml_lexer.mll  xml_light_dtd_check.ml  xml_light_dtd_check.mli
.github/workflows/: build.yml
src/: dtd.ml  dtd.mli  dune  xml.ml  xml.mli  xmlParser.ml  xmlParser.mli  xml_lexer.mli  xml_light_dtd_check.ml  xml_light_dtd_check.mli  xml_light_errors.ml  xml_light_types.mli  xml_light_utils.ml
tests/: check_dtd.ml  dune  test.ml  topic-like.dtd  topic.xml
