opam-version: "2.0"
version: "2.4"
synopsis: "Xml-Light is a minimal XML parser & printer for OCaml"
description: """
It provide functions to parse an XML document into an OCaml data
structure, work with it, and print it back to an XML document. It
support also DTD parsing and checking, and is entirely written in
OCaml, hence it does not require additional C library.
"""
maintainer: "https://github.com/ocaml/opam-repository/issues"
depends: [
  "ocaml" {>= "4.03"}
  "dune" {>= "2.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/ncannasse/xml-light"
