opam-version: "2.0"
maintainer: "https://github.com/ocaml/opam-repository/issues"
install: [make "install_ocamlfind"]
remove: ["ocamlfind" "remove" "xml-light"]
depends: [
  "ocaml" { >= "4.3"}
  "ocamlfind"
]
dev-repo: "git+https://github.com/ncannasse/xml-light"
synopsis: "Xml-Light is a minimal XML parser & printer for OCaml"
description: """
It provide functions to parse an XML document into an OCaml data
structure, work with it, and print it back to an XML document. It
support also DTD parsing and checking, and is entirely written in
OCaml, hence it does not require additional C library."""
flags: light-uninstall
